test/error/error10.pas
{缺少运算对象}
Program prog;
var
x, y : integer;
begin
  writeln('Please input two integers x and y');
  readln(a, b);
  writeln('a  div b = ', /b);